syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.games";
option java_outer_classname = "GamesProto";

package games;

service GameService {
  rpc GetGames (GameRequest) returns (GameReply) {}
}

message GameRequest {
  int32 id = 1;
}

message GameReply {
  int32 id = 1;
  string Name = 2;
  string Company = 3;
  string Type = 4;
  int32 ReleaseYear = 5;
}
